---------------------------------------------------------------------------------------------------
Version: 0.16.4
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.16.3
Date: 2023-01-20
  Locale:
    - Added additional tooltip to "only include entities in last x stage" option.
  Bugfixes:
    - When using "only include entities in last x stages", circuit connections are now properly included.
---------------------------------------------------------------------------------------------------
Version: 0.16.2
Date: 2023-01-12
  Locale:
    - Fixed staged build item tooltip
---------------------------------------------------------------------------------------------------
Version: 0.16.1
Date: 2023-01-12
  Bugfixes:
    - Fixed icons not loaded when editing blueprint grid/icon settings
    - Added stage name when editing blueprint item settings
---------------------------------------------------------------------------------------------------
Version: 0.16.0
Date: 2023-01-07
  Features:
    - More flexible blueprint settings
    - Blueprints: added option to only include entities changed in the last <n> stages
    - Added ability to reorder staged builds in the staged-builds list
---------------------------------------------------------------------------------------------------
Version: 0.15.2
Date: 2023-01-03
  Changes:
    - The Staged build settings window is brought to the "front" of the gui when opened.
---------------------------------------------------------------------------------------------------
Version: 0.15.1
Date: 2022-12-23
  Bugfixes:
    - Actually include the new GUI in the packaged mod...
---------------------------------------------------------------------------------------------------
Version: 0.15.0
Date: 2022-12-23
  Changes:
    - Rehauled the GUI.
  Minor Features:
    - Nothing important